--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c18da0",
+   "id": "c13c6b93",
    "metadata": {},
    "source": [
     "## Truthiness"
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3e2296",
+   "id": "d8055e33",
    "metadata": {},
    "source": [
     "Booleans in Python work as in most other languages, except that they’re\n",
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccbb75c7",
+   "id": "0c77b08d",
    "metadata": {},
    "source": [
     "Python uses the value **None** to indicate a nonexistent value. It is similar to\n",
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf8eef7",
+   "id": "6f31d643",
    "metadata": {},
    "source": [
     "Python lets us use any value where it expects a Boolean. The following\n",
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23900121",
+   "id": "01c99a02",
    "metadata": {},
    "source": [
     "Pretty much anything else gets treated as **True**. This allows you to easily\n",
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646f7758",
+   "id": "31a4efe5",
    "metadata": {},
    "source": [
     "A shorter way of doing the same is:\n"
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2510e469",
+   "id": "46611606",
    "metadata": {},
    "source": [
     "since and returns its second value when the first is **“truthy,”** and the first\n",
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3036fc0d",
+   "id": "cda75129",
    "metadata": {},
    "source": [
     "is definitely a number, although:"
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8088415",
+   "id": "28a02362",
    "metadata": {},
    "source": [
     "Python has an all function, which takes an iterable and returns True\n",
@@ -2204,22 +2204,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f4678662",
+   "cell_type": "markdown",
+   "id": "460f23ca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "all([True, 1, {3}]) # True, all are truthy\n",
     "all([True, 1, {}]) # False, {} is falsy\n",
@@ -2230,7 +2217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0404e5",
+   "id": "dbb64750",
    "metadata": {},
    "source": [
     "## Sorting"
@@ -2250,20 +2237,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "67df1f39",
+   "execution_count": 12,
+   "id": "6b3357d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = [4, 1, 2, 3]\n",
     "y = sorted(x) # y is [1, 2, 3, 4], x is unchanged\n",
-    "x.sort() # now x is [1, 2, 3, 4]\n"
+    "x.sort() # now x is [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7e5c2b2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7472c4c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c52851b",
+   "metadata": {},
+   "source": [
+    "By default, sort (and sorted) sort a list from smallest to largest based on\n",
+    "naively comparing the elements to one another."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d7418d",
+   "metadata": {},
+   "source": [
+    "If you want elements sorted from largest to smallest, you can specify a\n",
+    "reverse=True parameter. And instead of comparing the elements\n",
+    "themselves, you can compare the results of a function that you specify with\n",
+    "key:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5c2b2b",
+   "id": "3cd8c6b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort the list by absolute value from largest to smallest\n",
+    "x = sorted([-4, 1, -2, 3], key=abs, reverse=True) # is [-4, 3, -2, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bcfaf95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort the words and counts from highest count to lowest\n",
+    "wc = sorted(word_counts.items(),\n",
+    "            key=lambda word_and_count: word_and_count[1],\n",
+    "            reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bef43e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2271,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7472c4c4",
+   "id": "0837b71b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2279,15 +2352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62093cb6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e7c6f6c",
+   "id": "13319748",
    "metadata": {},
    "outputs": [],
    "source": []
