--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c13c6b93",
+   "id": "54d71f9b",
    "metadata": {},
    "source": [
     "## Truthiness"
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8055e33",
+   "id": "161c7817",
    "metadata": {},
    "source": [
     "Booleans in Python work as in most other languages, except that they’re\n",
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c77b08d",
+   "id": "c1ce6d61",
    "metadata": {},
    "source": [
     "Python uses the value **None** to indicate a nonexistent value. It is similar to\n",
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f31d643",
+   "id": "d5202f25",
    "metadata": {},
    "source": [
     "Python lets us use any value where it expects a Boolean. The following\n",
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c99a02",
+   "id": "ed344c27",
    "metadata": {},
    "source": [
     "Pretty much anything else gets treated as **True**. This allows you to easily\n",
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31a4efe5",
+   "id": "2ae7b954",
    "metadata": {},
    "source": [
     "A shorter way of doing the same is:\n"
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46611606",
+   "id": "3b3da36b",
    "metadata": {},
    "source": [
     "since and returns its second value when the first is **“truthy,”** and the first\n",
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda75129",
+   "id": "2044f186",
    "metadata": {},
    "source": [
     "is definitely a number, although:"
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a02362",
+   "id": "2ff280c9",
    "metadata": {},
    "source": [
     "Python has an all function, which takes an iterable and returns True\n",
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "460f23ca",
+   "id": "3822ce8f",
    "metadata": {},
    "source": [
     "all([True, 1, {3}]) # True, all are truthy\n",
@@ -2217,7 +2217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb64750",
+   "id": "17ff75fb",
    "metadata": {},
    "source": [
     "## Sorting"
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6b3357d0",
+   "id": "ad08efd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c52851b",
+   "id": "a38ec7b0",
    "metadata": {},
    "source": [
     "By default, sort (and sorted) sort a list from smallest to largest based on\n",
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d7418d",
+   "id": "fef05dba",
    "metadata": {},
    "source": [
     "If you want elements sorted from largest to smallest, you can specify a\n",
@@ -2312,7 +2312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd8c6b0",
+   "id": "0a967bd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,7 +2323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bcfaf95",
+   "id": "e2a8bba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2334,9 +2334,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf1768e6",
+   "metadata": {},
+   "source": [
+    "## List Comprehensions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bef43e2",
+   "id": "0fb567d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2344,15 +2352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0837b71b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13319748",
+   "id": "b2bd01c7",
    "metadata": {},
    "outputs": [],
    "source": []
