--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2347,12 +2347,110 @@
    "id": "0fb567d5",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "even_numbers = [x for x in range(5) if x % 2 == 0] # [0, 2, 4]\n",
+    "squares = [x * x for x in range(5)] # [0, 1, 4, 9, 16]\n",
+    "even_squares = [x * x for x in even_numbers] # [0, 4, 16]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf06d7da",
+   "metadata": {},
+   "source": [
+    "You can similarly turn lists into dictionaries or sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f90b756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "square_dict = {x: x * x for x in range(5)} # {0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n",
+    "square_set = {x * x for x in [1, -1]} # {1}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5453c867",
+   "metadata": {},
+   "source": [
+    "If you don’t need the value from the list, it’s common to use an underscore\n",
+    "as the variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4ac69dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zeros = [0 for _ in even_numbers] # has the same length as even_numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1252a0b",
+   "metadata": {},
+   "source": [
+    "A list comprehension can include multiple fors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a18ad715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = [(x, y)\n",
+    "        for x in range(10)\n",
+    "        for y in range(10)] # 100 pairs (0,0) (0,1) ... (9,8), (9,9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cebbf40b",
+   "metadata": {},
+   "source": [
+    "and later fors can use the results of earlier ones:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c150b3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "increasing_pairs = [(x, y) # only pairs with x < y,\n",
+    "                    for x in range(10) # range(lo, hi) equals\n",
+    "                    for y in range(x + 1, 10)] # [lo, lo + 1, ..., hi - 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1c23ebd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2bd01c7",
+   "id": "02824881",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3660beec",
    "metadata": {},
    "outputs": [],
    "source": []
