--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2224,14 +2224,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62fd179b",
+   "cell_type": "markdown",
+   "id": "04d797c8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Every Python list has a sort method that sorts it in place. If you don’t want\n",
-    "to mess up your list, you can use the sorted function, which returns a new\n",
+    "Every Python **list** has a **sort** method that sorts it in place. If you don’t want\n",
+    "to mess up your list, you can use the **sorted** function, which returns a new\n",
     "list:"
    ]
   },
