--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d797c8",
+   "id": "dec8862a",
    "metadata": {},
    "source": [
     "Every Python **list** has a **sort** method that sorts it in place. If you don’t want\n",
@@ -2292,7 +2292,7 @@
    "id": "a38ec7b0",
    "metadata": {},
    "source": [
-    "By default, sort (and sorted) sort a list from smallest to largest based on\n",
+    "By default, **sort** (and sorted) sort a list from smallest to largest based on\n",
     "naively comparing the elements to one another."
    ]
   },
@@ -2302,7 +2302,7 @@
    "metadata": {},
    "source": [
     "If you want elements sorted from largest to smallest, you can specify a\n",
-    "reverse=True parameter. And instead of comparing the elements\n",
+    "**reverse=True** parameter. And instead of comparing the elements\n",
     "themselves, you can compare the results of a function that you specify with\n",
     "key:"
    ]
@@ -2356,7 +2356,7 @@
    "id": "71cf62b6",
    "metadata": {},
    "source": [
-    "You can similarly turn lists into dictionaries or sets:"
+    "We can similarly turn lists into dictionaries or sets:"
    ]
   },
   {
@@ -2394,7 +2394,7 @@
    "id": "1e66ad49",
    "metadata": {},
    "source": [
-    "A list comprehension can include multiple fors:"
+    "A list comprehension can include multiple **for**s:"
    ]
   },
   {
@@ -2414,7 +2414,7 @@
    "id": "bc8658d9",
    "metadata": {},
    "source": [
-    "and later fors can use the results of earlier ones:\n"
+    "and later **for**s can use the results of earlier ones:\n"
    ]
   },
   {
@@ -2453,7 +2453,7 @@
    "id": "b75229b9",
    "metadata": {},
    "source": [
-    "As you can see in the second case, you can optionally add a message to be\n",
+    "As we can see in the second case, we can optionally add a message to be\n",
     "printed if the assertion fails."
    ]
   },
@@ -2485,7 +2485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert smallest_item([10, 20, 5, 40]) == 5\n"
+    "assert smallest_item([10, 20, 5, 40]) == 5"
    ]
   },
   {
