--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2204,9 +2204,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3822ce8f",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aa481c61",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "all([True, 1, {3}]) # True, all are truthy\n",
     "all([True, 1, {}]) # False, {} is falsy\n",
@@ -2225,7 +2238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec8862a",
+   "id": "46dce4ae",
    "metadata": {},
    "source": [
     "Every Python **list** has a **sort** method that sorts it in place. If you don’t want\n",
@@ -2434,7 +2447,7 @@
    "id": "c641461a",
    "metadata": {},
    "source": [
-    "## Automated Testing and assert"
+    "## Automated Testing and \"assert\""
    ]
   },
   {
