--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2534,12 +2534,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d81dc3ed",
+   "cell_type": "markdown",
+   "id": "12968c1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Object-Oriented Programming\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2547,7 +2547,10 @@
    "id": "1ee85632",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CountingClicker:\n",
+    "    \"\"\"A class can/should have a docstring, just like a function\"\"\"\n"
+   ]
   },
   {
    "cell_type": "code",
