--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2558,7 +2558,10 @@
    "id": "64b3262d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def __init__(self, count = 0):\n",
+    "    self.count = count"
+   ]
   },
   {
    "cell_type": "code",
@@ -2566,7 +2569,11 @@
    "id": "fc046ff9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clicker1 = CountingClicker() # initialized to 0\n",
+    "clicker2 = CountingClicker(100) # starts with count=100\n",
+    "clicker3 = CountingClicker(count=100) # more explicit way of doing the same"
+   ]
   },
   {
    "cell_type": "code",
@@ -2574,7 +2581,10 @@
    "id": "c6e8c473",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def __repr__(self):\n",
+    "    return f\"CountingClicker(count={self.count})\""
+   ]
   },
   {
    "cell_type": "code",
@@ -2582,7 +2592,17 @@
    "id": "b11a9173",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def click(self, num_times = 1):\n",
+    "    \"\"\"Click the clicker some number of times.\"\"\"\n",
+    "    self.count += num_times\n",
+    "    \n",
+    "def read(self):\n",
+    "    return self.count\n",
+    "\n",
+    "def reset(self):\n",
+    "    self.count = 0"
+   ]
   },
   {
    "cell_type": "code",
@@ -2590,7 +2610,15 @@
    "id": "395ece8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clicker = CountingClicker()\n",
+    "assert clicker.read() == 0, \"clicker should start with count 0\"\n",
+    "clicker.click()\n",
+    "clicker.click()\n",
+    "assert clicker.read() == 2, \"after two clicks, clicker should have count 2\"\n",
+    "clicker.reset()\n",
+    "assert clicker.read() == 0, \"after reset, clicker should be back to 0\""
+   ]
   },
   {
    "cell_type": "code",
@@ -2598,7 +2626,22 @@
    "id": "565749d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# A subclass inherits all the behavior of its parent class.\n",
+    "class NoResetClicker(CountingClicker):\n",
+    "    # This class has all the same methods as CountingClicker\n",
+    "\n",
+    "# Except that it has a reset method that does nothing.\n",
+    "def reset(self):\n",
+    "    pass\n",
+    "\n",
+    "clicker2 = NoResetClicker()\n",
+    "assert clicker2.read() == 0\n",
+    "clicker2.click()\n",
+    "assert clicker2.read() == 1\n",
+    "clicker2.reset()\n",
+    "assert clicker2.read() == 1, \"reset shouldn't do anything\""
+   ]
   },
   {
    "cell_type": "code",
