--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2542,6 +2542,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37de6201",
+   "metadata": {},
+   "source": [
+    "Python allows you to define classes that encapsulate\n",
+    "data and the functions that operate on them. We’ll use them sometimes to\n",
+    "make our code cleaner and simpler. It’s probably simplest to explain them\n",
+    "by constructing a heavily annotated example."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1ee85632",
