Iterables and Generators

--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2655,44 +2655,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e648e30",
+   "cell_type": "markdown",
+   "id": "4d68afc7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Iterables and Generators"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d742108",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_range(n):\n",
+    "    i = 0\n",
+    "    while i < n:\n",
+    "        yield i # every call to yield produces a value of the generator\n",
+    "        i += 1"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56d81b2c",
+   "cell_type": "markdown",
+   "id": "c0fc4b76",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The following loop will consume the yielded values one at a time until\n",
+    "none are left:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6fabbebe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i: 0\n",
+      "i: 1\n",
+      "i: 2\n",
+      "i: 3\n",
+      "i: 4\n",
+      "i: 5\n",
+      "i: 6\n",
+      "i: 7\n",
+      "i: 8\n",
+      "i: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in generate_range(10):\n",
+    "    print(f\"i: {i}\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fdd508b",
+   "cell_type": "markdown",
+   "id": "0758f07b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "With a generator, you can even create an infinite sequence:\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2700,15 +2727,23 @@
    "id": "9a30bcab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def natural_numbers():\n",
+    "    \"\"\"returns 1, 2, 3, ...\"\"\"\n",
+    "    n = 1\n",
+    "    while True:\n",
+    "        yield n\n",
+    "        n += 1\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6362f3e5",
+   "cell_type": "markdown",
+   "id": "e0cffd0b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A second way to create generators is by using for comprehensions wrapped\n",
+    "in parentheses:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2716,15 +2751,18 @@
    "id": "d06ca0d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evens_below_20 = (i for i in generate_range(20) if i % 2 == 0)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ed08817",
+   "cell_type": "markdown",
+   "id": "8196a8f2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Such a “generator comprehension” doesn’t do any work until you iterate\n",
+    "over it (using for or next). We can use this to build up elaborate data\u0002processing pipelines:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2732,7 +2770,14 @@
    "id": "2ab5ea48",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# None of these computations *does* anything until we iterate\n",
+    "data = natural_numbers()\n",
+    "evens = (x for x in data if x % 2 == 0)\n",
+    "even_squares = (x ** 2 for x in evens)\n",
+    "even_squares_ending_in_six = (x for x in even_squares if x % 10 == 6)\n",
+    "# and so on"
+   ]
   },
   {
    "cell_type": "code",
@@ -2740,7 +2785,22 @@
    "id": "3b165426",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = [\"Alice\", \"Bob\", \"Charlie\", \"Debbie\"]\n",
+    "# not Pythonic\n",
+    "for i in range(len(names)):\n",
+    "    print(f\"name {i} is {names[i]}\")\n",
+    "    \n",
+    "# also not Pythonic\n",
+    "i = 0\n",
+    "for name in names:\n",
+    "    print(f\"name {i} is {names[i]}\")\n",
+    "    i += 1\n",
+    "    \n",
+    "# Pythonic\n",
+    "for i, name in enumerate(names):\n",
+    "    print(f\"name {i} is {name}\")"
+   ]
   },
   {
    "cell_type": "code",
