--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2803,116 +2803,190 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c06f688",
+   "cell_type": "markdown",
+   "id": "8abcf03d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Randomness"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0fabc16b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "random.seed(10) # this ensures we get the same results every time\n",
+    "four_uniform_randoms = [random.random() for _ in range(4)]\n",
+    "\n",
+    "# [0.5714025946899135, # random.random() produces numbers\n",
+    "# 0.4288890546751146, # uniformly between 0 and 1.\n",
+    "# 0.5780913011344704, # It's the random function we'll use\n",
+    "# 0.20609823213950174] # most often.\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdea96c7",
+   "cell_type": "markdown",
+   "id": "42493984",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The random module actually produces pseudorandom (that is,\n",
+    "deterministic) numbers based on an internal state that you can set with\n",
+    "random.seed if you want to get reproducible results:\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a54b7f6f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5714025946899135\n",
+      "0.5714025946899135\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(10) # set the seed to 10\n",
+    "print(random.random()) # 0.57140259469\n",
+    "random.seed(10) # reset the seed to 10\n",
+    "print(random.random()) # 0.57140259469 again"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84945cba",
+   "cell_type": "markdown",
+   "id": "fb07277c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We’ll sometimes use random.randrange, which takes either one or two\n",
+    "arguments and returns an element chosen randomly from the corresponding\n",
+    "range:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "846dc48d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randrange(10) # choose randomly from range(10) = [0, 1, ..., 9]\n",
+    "random.randrange(3, 6) # choose randomly from range(3, 6) = [3, 4, 5]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edf6f95f",
+   "cell_type": "markdown",
+   "id": "33c132d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are a few more methods that we’ll sometimes find convenient. For\n",
+    "example, random.shuffle randomly reorders the elements of a list:\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cfe88123",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 9, 2, 3, 7, 8, 4, 1, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "up_to_ten = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "random.shuffle(up_to_ten)\n",
+    "print(up_to_ten)\n",
+    "# [7, 2, 6, 8, 9, 4, 10, 1, 3, 5] (your results will probably be different)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eda47e3b",
+   "cell_type": "markdown",
+   "id": "1c42e1ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If you need to randomly pick one element from a list, you can use\n",
+    "random.choice:\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "469d5eb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_best_friend = random.choice([\"Alice\", \"Bob\", \"Charlie\"]) # \"Bob\" for me"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "059b4451",
+   "cell_type": "markdown",
+   "id": "c3566006",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "And if you need to randomly choose a sample of elements without\n",
+    "replacement (i.e., with no duplicates), you can use random.sample:\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "febdf456",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lottery_numbers = range(60)\n",
+    "winning_numbers = random.sample(lottery_numbers, 6) # [16, 36, 10, 6, 25, 9]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "434469c6",
+   "cell_type": "markdown",
+   "id": "e1df12ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To choose a sample of elements with replacement (i.e., allowing duplicates),\n",
+    "you can just make multiple calls to random.choice:\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "021b9bfd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 9, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "four_with_replacement = [random.choice(range(10)) for _ in range(4)]\n",
+    "print(four_with_replacement) # [9, 4, 4, 2]\n"
+   ]
   },
   {
    "cell_type": "code",
