--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2804,7 +2804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8abcf03d",
+   "id": "e6d33f1a",
    "metadata": {},
    "source": [
     "## Randomness"
@@ -2824,12 +2824,12 @@
     "# [0.5714025946899135, # random.random() produces numbers\n",
     "# 0.4288890546751146, # uniformly between 0 and 1.\n",
     "# 0.5780913011344704, # It's the random function we'll use\n",
-    "# 0.20609823213950174] # most often.\n"
+    "# 0.20609823213950174] # most often."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42493984",
+   "id": "88c2fc08",
    "metadata": {},
    "source": [
     "The random module actually produces pseudorandom (that is,\n",
@@ -2854,14 +2854,14 @@
    ],
    "source": [
     "random.seed(10) # set the seed to 10\n",
-    "print(random.random()) # 0.57140259469\n",
+    "print(random.random())\n",
     "random.seed(10) # reset the seed to 10\n",
-    "print(random.random()) # 0.57140259469 again"
+    "print(random.random()) "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb07277c",
+   "id": "c8fc4227",
    "metadata": {},
    "source": [
     "We’ll sometimes use random.randrange, which takes either one or two\n",
@@ -2893,7 +2893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33c132d1",
+   "id": "9c88cf52",
    "metadata": {},
    "source": [
     "There are a few more methods that we’ll sometimes find convenient. For\n",
@@ -2917,13 +2917,12 @@
    "source": [
     "up_to_ten = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "random.shuffle(up_to_ten)\n",
-    "print(up_to_ten)\n",
-    "# [7, 2, 6, 8, 9, 4, 10, 1, 3, 5] (your results will probably be different)"
+    "print(up_to_ten)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1c42e1ce",
+   "id": "a931416a",
    "metadata": {},
    "source": [
     "If you need to randomly pick one element from a list, you can use\n",
@@ -2942,7 +2941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3566006",
+   "id": "8ec772f8",
    "metadata": {},
    "source": [
     "And if you need to randomly choose a sample of elements without\n",
@@ -2962,7 +2961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1df12ac",
+   "id": "0869a447",
    "metadata": {},
    "source": [
     "To choose a sample of elements with replacement (i.e., allowing duplicates),\n",
@@ -2985,7 +2984,7 @@
    ],
    "source": [
     "four_with_replacement = [random.choice(range(10)) for _ in range(4)]\n",
-    "print(four_with_replacement) # [9, 4, 4, 2]\n"
+    "print(four_with_replacement)"
    ]
   },
   {
