--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2988,20 +2988,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97d7201d",
+   "cell_type": "markdown",
+   "id": "1a3c18ad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Regular Expressions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "630828ef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "re_examples = [ # All of these are True, because\n",
+    "    not re.match(\"a\", \"cat\"), # 'cat' doesn't start with 'a'\n",
+    "    re.search(\"a\", \"cat\"), # 'cat' has an 'a' in it\n",
+    "    not re.search(\"c\", \"dog\"), # 'dog' doesn't have a 'c' in it.\n",
+    "    3 == len(re.split(\"[ab]\", \"carbs\")), # Split on a or b to ['c','r','s'].\n",
+    "    \"R-D-\" == re.sub(\"[0-9]\", \"-\", \"R2D2\") # Replace digits with dashes.\n",
+    "    ]\n",
+    "assert all(re_examples), \"all the regex examples should be True\""
+   ]
   },
   {
    "cell_type": "code",
